fix pre tags on smaller screens

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,85 +2,3 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-code[class*="language-"],
-pre[class*="language-"] {
-  @apply text-gray-800 text-gray-50;
-}
-
-pre::-webkit-scrollbar {
-  display: none;
-}
-
-pre {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */ 
-}
-
-.remark-code-title {
-  @apply text-gray-400 text-gray-200 px-5 py-5 rounded-t bg-gray-200 bg-gray-800 text-sm font-mono font-bold max-w-xs ;
-}
-
-.remark-code-title + pre {
-  @apply mt-0 rounded-t-none ;
-}
-
-.mdx-marker {
-  @apply block -mx-1 px-4 bg-gray-100 bg-gray-800 border-l-4 border-blue-500 ;
-}
-
-.prose pre {
-  @apply bg-gray-50 border  bg-gray-900  sm:w-auto break-all ;
-}
-
-.prose p {
-  @apply mt-4 mb-4;
-}
-
-.prose pre > p {
-  @apply mt-4 mb-4 leading-4 ;
-}
-
-.prose code {
-  @apply text-gray-400 text-gray-200 px-1 py-0.5 rounded-md bg-gray-100 bg-gray-900 ;
-}
-
-.prose img {
-  /* Don't apply styles to next/image */
-  @apply m-0;
-}
-
-/* Project & blog post styles */ 
-.markdown {
-	@apply mt-7 text-xl leading-8;
-}
-
-.markdown p,
-.markdown ul,
-.markdown ol,
-.markdown li,
-.markdown blockquote {
-  @apply mt-4 mb-4 ;
-  
-}
-
-.markdown ul {
-	@apply list-inside list-disc;
-}
-
-.markdown ol {
-	@apply list-inside list-decimal;
-}
-
-.markdown blockquote {
-	@apply mb-5 -ml-5 pl-5 border-solid border-l-4 text-2xl italic leading-9 ;
-}
-
-.markdown a {
-	@apply underline;
-}
-
-.markdown h2 {
-	@apply text-3xl mb-7 font-black;
-}
